# il2cppinspector-precompiled-library

./: CMakeLists.txt  init.cpp
include/: il2cpp-api-functions-ptr.h  il2cpp-api-functions.h  il2cpp-types-ptr.h  il2cpp.h  init.h
